--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -31,7 +31,8 @@
                                                 {{item.name}}
                                             </a>
                                             <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" (click)="routeToAddNewCategory()">+AddNew</a>
+                                            <a class="dropdown-item" (click)="routeToAddNewCategory()"><i class="fa fa-plus"></i>
+                                                {{"AddNew" | localize}}</a>
                                         </div>
                                     </div>
                                 </div>
