reconcilliation , itemzied and amortized.

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -132,14 +132,12 @@
                                                     </div>
                                                 </div>
                                             </div>
-
-
                                         </div>
 
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
                                                 data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary" (click)="SaveChanges()" >Save changes</button>
+                                            <button type="button" class="btn btn-primary"  data-dismiss="modal" (click)="SaveChanges()" >Save changes</button>
                                         </div>
                                     </div>
                                 </div>
