--- a/angular/src/app/main/errorlog/errorlog.component.css
+++ b/angular/src/app/main/errorlog/errorlog.component.css
@@ -147,10 +147,20 @@
 
 .primeng-paging-container {
     padding-top: 15px;
+    float:  left !important;
 }
 .primeng-paging-container .ui-paginator{
     text-align: left !important;
 }
 .primeng-paging-container .total-records-count{
-    float: right;
+    float: right !important;
+}
+.primeng-paging-container[_ngcontent-htg-c55] {
+  padding-top: 15px;
+ 
+}
+.primeng-datatable-container .total-records-count {
+  float: right !important;
+  position: relative;
+  bottom: -31px !important;
 }
