--- a/angular/src/app/main/errorlog/errorlog.component.html
+++ b/angular/src/app/main/errorlog/errorlog.component.html
@@ -33,41 +33,48 @@
                                 [resizableColumns]="primengTableHelper.resizableColumns">
                                 <ng-template pTemplate="header">
                                     <tr> 
-                                        <th style="width: 20%" pSortableColumn="creationTime">
+                                        <th style="width: 16%" pSortableColumn="creationTime">
                                             {{l('Date')}}
                                             <p-sortIcon field="record.creationTime"></p-sortIcon>
                                         </th>
-                                        <th style="width: 20%"> {{l('Type')}} </th>
+                                        <th style="width: 16%" pSortableColumn="type">
+                                            {{l('Type')}}
+                                            <p-sortIcon field="record.type"></p-sortIcon>
+                                        </th>
+                                        <th style="width: 20%" pSortableColumn="userId">
+                                            {{l('User')}}
+                                            <p-sortIcon field="record.userId"></p-sortIcon>
+                                        </th>
 
-                                        <th style="width: 20%"> {{l('User')}} </th>
+                                        <!-- <th style="width: 20%">  </th> -->
 
-                                        <th style="width: 20%">{{l('Records')}}</th>
+                                        <th style="width: 10%">{{l('Records')}}</th>
 
-                                        <th style="width: 20%"> {{l('Erros')}} </th>
+                                        <th style="width: 16%"> {{l('Erros')}} </th>
 
-                                        <th style="width: 20%"> {{l('Action')}} </th>
+                                        <th style="width: 16%"> {{l('Action')}} </th>
                                     </tr>
 
                                 </ng-template>
                                 <ng-template pTemplate="body" let-record="$implicit">
                                     <tr>
-                                        <td style="width: 20%">
+                                        <td style="width: 16%">
                                             {{record.creationTime | momentFormat:'L hh:mm a'}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td style="width: 16%">
                                             {{record.type}}
                                         </td>
                                         <td style="width: 20%">
                                             {{record.createdBy}}
                                         </td>                                                                  
-                                        <td style="width: 20%">
+                                        <td style="width: 10%">
                                             {{record.records}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td style="width: 16%">
                                             <a *ngIf="record.filePath" style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.filePath)">Download</a>
                                             <a *ngIf="!record.filePath">-</a>
                                         </td>
-                                        <div *ngIf="record.type == 'TrialBalance'">
+                                        <div style="width: 16%" *ngIf="record.type == 'TrialBalance'">
                                             <td *ngIf="!record.isRollBacked">
                                                 <a  class="btn"
                                                 href="javascript:;" (click)="rollBack(record.id)">
@@ -87,10 +94,11 @@
                                              [totalRecords]="primengTableHelper.totalRecordsCount"
                                              [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage">
                                 </p-paginator>
-                                <span class="total-records-count">
-                                    {{l('TotalRecordsCount', primengTableHelper.totalRecordsCount)}}
-                                </span>
+                               
                             </div>
+                            <span class="total-records-count">
+                                {{l('TotalRecordsCount', primengTableHelper.totalRecordsCount)}}
+                            </span>
                         </div>
                         <!--<Primeng-TurboTable-End>-->
                     </div>
