--- a/angular/src/app/admin/importlog/importlog.component.html
+++ b/angular/src/app/admin/importlog/importlog.component.html
@@ -33,47 +33,50 @@
                                 [resizableColumns]="primengTableHelper.resizableColumns">
                                 <ng-template pTemplate="header">
                                     <tr> 
-                                        <th style="width: 20%" pSortableColumn="creationTime">
+                                        <th style="width: 200px" pSortableColumn="creationTime">
                                             {{l('Date')}}
                                             <p-sortIcon field="record.creationTime"></p-sortIcon>
                                         </th>
-                                        <th style="width: 20%"> {{l('Type')}} </th>
+                                        <th style="width: 150px"> {{l('Type')}} </th>
 
-                                        <th style="width: 20%"> {{l('User')}} </th>
+                                        <th style="width: 200px"> {{l('User')}} </th>
 
-                                        <th style="width: 20%">{{l('Records')}}</th>
+                                        <th style="width: 150px">{{l('Records')}}</th>
 
-                                        <th style="width: 20%"> {{l('Erros')}} </th>
+                                        <th style="width: 80px"> {{l('Erros')}} </th>
 
-                                        <th style="width: 20%"> {{l('Action')}} </th>
+                                        <th style="width: 100px"> {{l('Action')}} </th>
                                     </tr>
 
                                 </ng-template>
                                 <ng-template pTemplate="body" let-record="$implicit">
                                     <tr>
-                                        <td style="width: 20%">
+                                        <td style="width: 200px">
+                                            <span class="ui-column-title"> {{l('Date')}}</span>
                                             {{record.creationTime | momentFormat:'L hh:mm a'}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td style="width: 150px">
+                                            <span class="ui-column-title"> {{l('Type')}}</span>
                                             {{record.type}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td style="width: 200px">
+                                            <span class="ui-column-title"> {{l('User')}}</span>
                                             {{record.createdBy}}
                                         </td>                                                                  
-                                        <td style="width: 20%">
+                                        <td style="width: 150px">
+                                            <span class="ui-column-title"> {{l('Records')}}</span>
                                             {{record.records}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td style="width: 80px">
+                                            <span class="ui-column-title"> {{l('Error')}}</span>
                                             <a *ngIf="record.filePath" style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.filePath)">Download</a>
                                             <a *ngIf="!record.filePath">-</a>
                                         </td>
-                                        <div *ngIf="record.type == 'TrialBalance'">
-                                            <td *ngIf="!record.isRollBacked">
-                                                <a  class="btn"
+                                            <td style="width: 100px">
+                                                <a  *ngIf="!record.isRollBacked && record.type == 'TrialBalance'" class="btn"
                                                 href="javascript:;" (click)="rollBack(record.id)">
                                                 <img src="../../../../assets/img/edit.svg"></a>
                                             </td>
-                                        </div>
                                     </tr>
                                 </ng-template>
                             </p-table>
