store imlementation and Ui fixes.

--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -33,7 +33,7 @@
                                             <label for="TaskName"> Account No.</label>
                                             <input type="text" autocomplete="off" name="accountNumber" (focusout)="CheckAccountNumber()" class="form-control"
                                                 [(ngModel)]="accountDto.accountNumber">
-                                                <span style="color:red" *ngIf="isAccountExist">Account Number is already exist.</span>   
+                                                <span style="color:red" *ngIf="isAccountExist">Account number already exist.</span>   
                                         </div>
                                     </div>
                                 </div>
